makefile: build different DEFINES contents into different build directories to get clean builds.

--- a/Source code/Embedded/.gitignore
+++ b/Source code/Embedded/.gitignore
@@ -4,10 +4,10 @@
 /Debug - DFU/
 /Release - DFU/
 
-dSight_Sharp_LCD/
-HDK_OLED/
-HDK_Sharp_LCD/
-HDK_20/
+dSight_Sharp_LCD*/
+HDK_OLED*/
+HDK_Sharp_LCD*/
+HDK_20*/
 !/src/Variants/dSight_Sharp_LCD/
 !/src/Variants/HDK_OLED/
 !/src/Variants/HDK_Sharp_LCD/
