--- a/Source code/Embedded/makefile-build/Makefile
+++ b/Source code/Embedded/makefile-build/Makefile
@@ -369,8 +369,13 @@ help:
 	@echo ($(strip $(FINAL_GENERATED)))
 	@echo make distclean is make realclean for both "standard" configuration and the special configurations listed below.
 	@echo Build targets:
-	@echo These targets exist to build variants: $(CONVENIENCE_TARGETS)
-	@echo By default (or by make all), this subset is built: $(BUILT_BY_ALL)
+	@echo These targets exist to build variants:
+	$(call FUNC_PRINT_LIST,CONVENIENCE_TARGETS, - )
+	@echo By default (or by make all), this subset is built:
+	$(call FUNC_PRINT_LIST,BUILT_BY_ALL, - )
 	@echo make hdmi_verbose will build targets with DEFINES=HDMI_VERBOSE - make hdmi_verbose_clean is its clean counterpart.
 	@echo make disable_video will build targets with DEFINES=SVR_DISABLE_VIDEO_INPUT - make disable_video_clean is its clean counterpart.
+	@echo Special config targets:
+	$(call FUNC_PRINT_LIST,SPECIAL_CONFIG_TARGETS, - )
+	@echo The extreme target "complete" will build a normal make all, as well as all those special config targets.
 .PHONY: help
