Some moving and renaming so that it can be trialed in the makefile build.

--- a/Source code/Embedded/makefile-build/Makefile
+++ b/Source code/Embedded/makefile-build/Makefile
@@ -241,8 +241,9 @@ SHORT_NAME := hdk2
 VARIANT_NAME := HDK_20
 
 # Per-variant libs and includes
-LIBS_HDK_20 := $(REL_ROOT)/vendor/libhdk20/libhdk20.$(strip $(LIBHDK20_VER)).a
-INCLUDE_DIRS_HDK_20 := $(REL_ROOT)/vendor/libhdk20/
+#LIBS_HDK_20 := $(REL_ROOT)/vendor/libhdk20/libhdk20.$(strip $(LIBHDK20_VER)).a
+#INCLUDE_DIRS_HDK_20 := $(REL_ROOT)/vendor/libhdk20/
+EXTRA_C_SRCS := src/DeviceDrivers/HDK2.c
 include add_variant.mk
 
 
