Update gitignore in makefile build to allow pasting in bits of the upgrade tool

--- a/Source code/Embedded/makefile-build/.gitignore
+++ b/Source code/Embedded/makefile-build/.gitignore
@@ -3,3 +3,10 @@
 /gitdefines.h.tmp
 release-*/
 snapshot-*/
+
+# For those who have put the flashing tools in this directory
+/hdktool
+/dfu-programmer
+/hdktool.log
+/just-install-hexfile.cmd
+/upgrade.ps1
